[package]
name = "tauri-plugin-androidtvcheck"
version = "0.1.0"
authors = ["setoelkahfi@gmail.com"]
description = "A Tauri plugin for checking Android TV devices."
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-androidtvcheck"

[dependencies]
tauri = { version = "2.6.2" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.3.0", features = ["build"] }
