[package]
name = "tauri-plugin-android-tv-check"
version = "1.1.2"
authors = ["smbcloud@setoelkahfi.se"]
description = "A Tauri plugin for checking Android TV devices."
license = "MIT"
homepage = "https://github.com/smbcloudXYZ/tauri-plugin-android-tv-check"
repository = "https://github.com/smbcloudXYZ/tauri-plugin-android-tv-check"
documentation = "https://docs.rs/tauri-plugin-android-tv-check"
categories = ["api-bindings", "multimedia", "os"]
keywords = ["tauri", "android", "tv", "plugin", "device-detection"]
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-android-tv-check"

[dependencies]
tauri = { version = "2.6.2" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.3.0", features = ["build"] }
